### @autoconf_input@

# Author: Michael Grünewald
# Date: Sat Feb  7 17:34:35 CET 2015

# Anvil (https://github.com/michipili/anvil)
# This file is part of Anvil
#
# Copyright © 2015 Michael Grünewald
#
# This file must be used under the terms of the CeCILL-B.
# This source file is licensed as described in the file COPYING, which
# you should have received as part of this distribution. The terms
# are also available at
# http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt


AC_INIT([subr/anvil_autoconf.sh.in])
AC_CONFIG_FILES([subr/anvil_autoconf.sh])
AC_CONFIG_FILES([Makefile.config])
AC_OUTPUT

### End of file `configure.ac'
